# NL_Grad_ChatGPT

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  render.yaml  requirements-render.txt  requirements.txt  secrets.toml.example
.github/workflows/: daily-ingest.yml  test-phase1.yml  test-phase2.yml
PHASES/: README.md
PHASES/Phase-01-Foundation/: BUILT_FILES.md  CHECKLIST.md  GATE_REPORT.md  STATUS.md  WHAT_THIS_PHASE_DOES.md
PHASES/Phase-02-Scraping/: BUILT_FILES.md  CHECKLIST.md  GATE_REPORT.md  REAL-INGEST.md  STATUS.md  WHAT_THIS_PHASE_DOES.md
PHASES/Phase-03-Chunking/: CHECKLIST.md  GATE_REPORT.md  PHASE-3.1-STATUS.md  PHASE-3.2-STATUS.md  PHASE-3.3-STATUS.md  PHASE-3.4-STATUS.md  PHASE-3.5-STATUS.md  PHASE-3.6-STATUS.md  STATUS.md  WHAT_THIS_PHASE_DOES.md
PHASES/Phase-04-Embedding/: CHECKLIST.md  GATE_REPORT.md  STATUS.md  (+6 more)
backend/: streamlit_app.py
data/: manifest.json
docs/: Improvements_and_changes.md  architecture-phase-3-chunking.md  architecture-phase-4-embedding.md  architecture.md  deployment-plan.md  free-and-fast-alignment.md  problemstatement.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
scripts/: build_real_prototype.py  chunk_preview.py  extract_preview.py  generate_phase3_pdf_fixture.py  patch_nature_source_urls.py  purge_legacy_data.py  segment_preview.py  start_backend.ps1  start_backend.sh  start_hitl.ps1  start_render.sh  structure_preview.py  trim_corpus.py  validate_api_keys.py  verify_chroma.py
tests/: conftest.py  live_api_budget.py
(+228 files in other folders)
